@@ -10,6 +10,11 @@ Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)
 
 	CHANGES:  	explanation of codification changes
 
+2012/12/03 - jgonzale - Simulator - 4.3.3
+	BUGFIX:		TASK_end / PARAVER_end order reversed. On file_data_access
+				total number of file pointers reserved minus 2, so as to 
+				guarantee the availability to the Paraver trace generator.
+
 2012/12/03 - jgonzale - Simulator - 4.3.2
 	BUGFIX:		TASK_end was called after PARAVER_end causing a resource lock
 				regarding the total number of files opened.
